# sdkwork-mahjong

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  sdkwork.workflow.json  tsconfig.json
.sdkwork/: README.md
apis/app-api/game/: mahjong-app-api.openapi.json
apis/backend-api/game/: mahjong-backend-api.openapi.json
apps/: README.md
apps/sdkwork-mahjong-common/: README.md
apps/sdkwork-mahjong-pc/: README.md  package.json  sdkwork.app.config.json  vite.config.ts
apps/sdkwork-mahjong-pc/docs/: INDEX.yaml  README.md
apps/sdkwork-mahjong-pc/docs/product/prd/: PRD.md
apps/sdkwork-mahjong-pc/etc/: sdkwork.deployment.config.json
apps/sdkwork-mahjong-pc/specs/: dependency.composition.json
apps/sdkwork-mahjong-pc/src/: App.tsx  main.tsx
configs/: README.md  mahjong.database.example.toml  sdkwork-api-cloud-gateway.mahjong.development.toml  sdkwork-api-cloud-gateway.mahjong.production.toml
configs/topology/: cloud.development.env  cloud.production.env  cloud.split-services.development.env  cloud.split-services.production.env  standalone.development.env  standalone.unified-process.production.env
crates/: README.md
crates/sdkwork-api-mahjong-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-mahjong-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-mahjong-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-api-mahjong-standalone-gateway/: Cargo.toml  build.rs
crates/sdkwork-api-mahjong-standalone-gateway/src/: bootstrap.rs  main.rs
crates/sdkwork-api-mahjong-standalone-gateway/tests/: match_web_framework.rs
crates/sdkwork-game-match-repository-sqlx/: Cargo.toml
crates/sdkwork-game-match-repository-sqlx/src/: memory.rs
crates/sdkwork-game-match-service/src/: lib.rs
crates/sdkwork-mahjong-api-server/: Cargo.toml  build.rs
crates/sdkwork-mahjong-api-server/src/: bootstrap.rs  health_router.rs  lib.rs  main.rs  match_router.rs  web_bootstrap.rs
crates/sdkwork-mahjong-api-server/tests/: match_web_framework.rs
crates/sdkwork-mahjong-database-host/: Cargo.toml
crates/sdkwork-mahjong-database-host/src/: lib.rs
crates/sdkwork-mahjong-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-mahjong-gateway-assembly/specs/: README.md  component.spec.json
crates/sdkwork-mahjong-gateway-assembly/src/: lib.rs
crates/sdkwork-mahjong-match-repository-sqlx/: Cargo.toml
crates/sdkwork-mahjong-match-repository-sqlx/src/: backend.rs  lib.rs  memory.rs  sqlx.rs
crates/sdkwork-mahjong-match-service/: Cargo.toml
crates/sdkwork-mahjong-standalone-gateway/: Cargo.toml  build.rs
crates/sdkwork-mahjong-standalone-gateway/src/: bootstrap.rs  main.rs
crates/sdkwork-mahjong-standalone-gateway/tests/: match_web_framework.rs
crates/sdkwork-routes-mahjong-app-api/: Cargo.toml  build.rs
crates/sdkwork-routes-mahjong-app-api/specs/: README.md  component.spec.json
crates/sdkwork-routes-mahjong-app-api/src/: lib.rs
crates/sdkwork-routes-mahjong-app-api/tests/: web_framework.rs
crates/sdkwork-routes-mahjong-backend-api/: Cargo.toml  build.rs
crates/sdkwork-routes-mahjong-backend-api/specs/: README.md  component.spec.json
crates/sdkwork-routes-mahjong-backend-api/src/: lib.rs
crates/sdkwork-routes-match-app-api/: Cargo.toml  build.rs
crates/sdkwork-routes-match-app-api/src/: lib.rs
crates/sdkwork-routes-match-app-api/tests/: web_framework.rs
crates/sdkwork-routes-match-backend-api/: build.rs
crates/sdkwork-routes-match-backend-api/specs/: component.spec.json
crates/sdkwork-routes-match-backend-api/src/: lib.rs
database/: README.md  database.manifest.json
database/contract/: prefix-registry.json  schema.yaml  table-registry.json
database/ddl/baseline/postgres/: 0001_mahjong_baseline.sql
database/ddl/baseline/sqlite/: 0001_mahjong_baseline.sql
database/drift/: policy.yaml
database/migrations/postgres/: 0001_mahjong_baseline.up.sql
database/migrations/sqlite/: 0001_mahjong_baseline.up.sql
deployments/: README.md
docs/: INDEX.yaml  README.md
docs/architecture/tech/: TECH_ARCHITECTURE.md
docs/product/prd/: PRD.md
etc/: sdkwork-api-cloud-gateway.mahjong.development.toml  sdkwork-api-cloud-gateway.mahjong.production.toml
scripts/: README.md  mahjong-pc-package-naming.test.mjs  mahjong-workspace-boundary.test.mjs  sdkwork-command.mjs
scripts/gateway/: assembly-materialize.mjs  assembly-validate.mjs
sdks/: README.md
sdks/_route-manifests/app-api/: sdkwork-mahjong-api-server.route-manifest.json  sdkwork-mahjong-standalone-gateway.route-manifest.json  sdkwork-routes-mahjong-app-api.route-manifest.json  sdkwork-routes-match-app-api.route-manifest.json
sdks/_route-manifests/backend-api/: sdkwork-mahjong-api-server.route-manifest.json  sdkwork-mahjong-standalone-gateway.route-manifest.json  sdkwork-routes-mahjong-backend-api.route-manifest.json  sdkwork-routes-match-backend-api.route-manifest.json
specs/: README.md  component.spec.json  iam.module.manifest.json  topology.spec.json
tests/contract/: database-framework.contract.test.mjs
tools/: README.md  mahjong_openapi_export.mjs  mahjong_route_manifest_check.mjs  mahjong_sdk_generate.mjs  materialize_mahjong_database_contract.mjs
