[workspace]
resolver = "2"
members = [
    "crates/sdkwork-api-mahjong-assembly",
    "crates/sdkwork-api-mahjong-assembly",
    "crates/sdkwork-api-mahjong-standalone-gateway",
    "crates/sdkwork-mahjong-database-host",
    "crates/sdkwork-game-match-service",
    "crates/sdkwork-game-match-repository-sqlx",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
sdkwork_api_mahjong_standalone_gateway = { package = "sdkwork-api-mahjong-standalone-gateway", path = "crates/sdkwork-api-mahjong-standalone-gateway" }
sdkwork-api-mahjong-assembly = { path = "crates/sdkwork-api-mahjong-assembly" }
sdkwork_mahjong_database_host = { package = "sdkwork-mahjong-database-host", path = "crates/sdkwork-mahjong-database-host" }
sdkwork_game_match_service = { package = "sdkwork-game-match-service", path = "crates/sdkwork-game-match-service" }
sdkwork_game_match_repository_sqlx = { package = "sdkwork-game-match-repository-sqlx", path = "crates/sdkwork-game-match-repository-sqlx" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-contract = { path = "../sdkwork-web-framework/crates/sdkwork-web-contract" }
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork_iam_context_service = { package = "sdkwork-iam-context-service", path = "../sdkwork-iam/crates/sdkwork-iam-context-service" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx" }
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
async-trait = "0.1"
axum = "0.8"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "postgres"] }
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
