[package]
name = "sdkwork-api-mahjong-assembly"
edition.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-mahjong application HTTP plane."

[lib]
name = "sdkwork_api_mahjong_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
