[package]
name = "sdkwork-api-mahjong-assembly"
edition.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-mahjong application HTTP plane."

[lib]
name = "sdkwork_api_mahjong_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork-routes-match-app-api.workspace = true
sdkwork-routes-match-backend-api.workspace = true
sdkwork_game_match_repository_sqlx.workspace = true
sdkwork_game_match_service.workspace = true
sdkwork_mahjong_database_host.workspace = true
sdkwork-web-bootstrap.workspace = true
tracing = "0.1"
