[package]
name = "sdkwork-api-mahjong-assembly"
edition.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-mahjong application HTTP plane."

[lib]
name = "sdkwork_api_mahjong_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork_mahjong_match_repository_sqlx.workspace = true
sdkwork_mahjong_match_service.workspace = true
sdkwork_mahjong_database_host.workspace = true
sdkwork-web-bootstrap.workspace = true
tracing = "0.1"
sdkwork-routes-mahjong-app-api.workspace = true
sdkwork-routes-mahjong-backend-api.workspace = true
