[package]
name = "sdkwork-api-mahjong-standalone-gateway"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "Thin standalone HTTP gateway for the SDKWork Mahjong API assembly."


[[bin]]
name = "sdkwork-api-mahjong-standalone-gateway"
path = "src/main.rs"

[dependencies]
axum.workspace = true
sdkwork-api-mahjong-assembly.workspace = true
sdkwork-utils-rust.workspace = true
tokio.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
