[package]
name = "sdkwork-mahjong-database-host"
version.workspace = true
edition.workspace = true
description = "SDKWork Mahjong database lifecycle bootstrap."

[lib]
name = "sdkwork_mahjong_database_host"
path = "src/lib.rs"

[dependencies]
dotenvy.workspace = true
sdkwork-database-config = { workspace = true }
sdkwork-database-lifecycle = { workspace = true }
sdkwork-database-spi = { workspace = true }
sdkwork-database-sqlx = { workspace = true }
