[package]
name = "sdkwork-mahjong-gateway-assembly"
version.workspace = true
edition.workspace = true
description = "Gateway assembly for the SDKWork Mahjong application HTTP plane."

[lib]
name = "sdkwork_mahjong_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
sdkwork_mahjong_standalone_gateway.workspace = true
