[package]
name = "sdkwork-routes-match-backend-api"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "SDKWork Mahjong match backend-api routes."
build = "build.rs"

[lib]
name = "sdkwork_routes_match_backend_api"
path = "src/lib.rs"

[build-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dependencies]
axum.workspace = true
serde.workspace = true
sdkwork_game_match_repository_sqlx.workspace = true
sdkwork_game_match_service.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-web-contract.workspace = true
sdkwork-web-core.workspace = true
sdkwork-web-bootstrap.workspace = true
sdkwork-iam-web-adapter.workspace = true
sdkwork-utils-rust.workspace = true
