[package]
name = "sdkwork-routes-match-app-api"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "SDKWork Mahjong match app-api routes."
build = "build.rs"

[lib]
name = "sdkwork_routes_match_app_api"
path = "src/lib.rs"

[build-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dependencies]
axum.workspace = true
serde.workspace = true
sdkwork_game_match_repository_sqlx.workspace = true
sdkwork_game_match_service.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-web-contract.workspace = true
sdkwork-web-core.workspace = true
sdkwork-web-bootstrap.workspace = true
sdkwork-iam-web-adapter.workspace = true
sdkwork-utils-rust.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
tower = { version = "0.5", features = ["util"] }
